# ai-trading-framework

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  mkdocs.yml  pyproject.toml  railway.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
deploy/docker/: Dockerfile
docs/: architecture.md  brokers_zerodha.md  build_with_framework.md  build_your_bot_in_10_minutes.md  deployment.md  deployment_railway.md  explainability.md  framework_deep_dive.md  index.md  plugins.md  public_launch_checklist.md  quickstart.md  replay.md  strategy_sdk.md  telegram.md  unified_bot_checklist.md  unified_bot_end_state.md  unified_bot_product_spec.md
examples/custom_strategy/: my_strategy.py
examples/paper_trading_bot/: README.md
examples/sandbox_demo/: README.md
examples/telegram_zerodha_bot/: README.md
src/ai_trading_framework/: __init__.py  models.py
src/ai_trading_framework/analytics/: __init__.py  benchmark.py  investment_planner.py
src/ai_trading_framework/api/: __init__.py  app.py  dashboard.py
src/ai_trading_framework/brokers/: __init__.py  base.py  groww.py  paper.py  zerodha.py
src/ai_trading_framework/execution/: __init__.py  service.py
src/ai_trading_framework/features/: __init__.py
tests/: test_api_flow.py  test_event_bus.py  test_execution_guard.py  test_oss_end_to_end.py  test_workflow.py
(+64 files in other folders)
